<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="16dp"
    >
    <ImageView
        android:id="@+id/banner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:src="@drawable/banner"
        android:contentDescription="@string/app_name"
        />
    <TextView
        android:id="@+id/description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/banner"
        android:gravity="center"
        android:text="@string/description"
        android:textSize="20sp"
        android:textColor="@color/primary_text"
        />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_download"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_url_label"
            android:textSize="20sp"
            android:textColor="@color/primary_text"
            />
        <EditText
            android:id="@+id/input_url"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:hint="@string/input_url_hint"
            android:textColorHint="@color/accent"
            />
    </LinearLayout>
    <Button
        android:id="@+id/button_download"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="32dp"
        android:background="@drawable/button"
        android:paddingBottom="14dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="10dp"
        android:text="@string/button_download"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        />
</RelativeLayout>